# CamIMUCalib

./: .gitignore  CMakeLists.txt  CamIMUCalib.cpp  Clean.bash  README.md  get_calib_data.cpp  octave-workspace  record  verify.cpp
CamCalib/: cali_pre.py  cali_run.py  calibrate.npz
Samples/: Display.cpp  SetParam.cpp  serial_example.cc
include/CamIMUCalib/: CamIMUCalibFun.h  TransformationMatrices.h
include/Camera/: hk_cam_wrapper.h
include/com/: datatypes.h  rmserial.h
include/com/serial/: serial.h
include/com/serial/impl/: unix.h
src/CamIMUCalib/: CamIMUCalib.cpp  CamIMUCalibFun.cpp  TransformationMatrices.cpp
src/Camera/: hk_cam_wrapper.cpp
src/com/: datatypes.cpp  rmserial.cpp
src/com/serial/: serial.cc
src/com/serial/impl/: unix.cc
src/com/serial/impl/list_ports/: list_ports_linux.cc
